# Copyright 2024-2025 Cornell University
# released under BSD 3-Clause License
# author: Kevin Laeufer <laeufer@cornell.edu>

[package]
name = "fst-writer"
version = "0.3.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["Kevin Laeufer <laeufer@cornell.edu>"]
description = "A Rust library for writing waveform traces in the FST format."
repository = "https://github.com/ekiwi/fst-writer"
license = "BSD-3-Clause"
keywords = ["fst", "waveform", "wavedump"]

[dependencies]
lz4_flex = "0.11"
miniz_oxide = "0.8.2"
thiserror = "2.0"
rustc-hash = "2.1"

[dev-dependencies]
wellen = "0.13.8"
proptest = "1.6"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
debug = 1
